--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,7 @@ body {
 .topnavbar .title {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 15px ;
 }
 .topnavbar .title-icon {
