--- a/src/App.css
+++ b/src/App.css
@@ -13,17 +13,14 @@
 :root[data-theme="dark"] {
   --background-color: #000000;
   --text-color: #f2f1f1;
-  --primary-bg-color: #000000 ;
+  --primary-bg-color: #000000;
   --topnav-box-shadow: 0 0 8px rgba(100, 100, 100, 1);
   --btmnav-box-shadow: 0 0 5px rgba(100, 100, 100, 1);
   --transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
-
-
-
 .icon {
-  color :var(--text-color) !important;
+  color: var(--text-color) !important;
 }
 .link {
   all: unset !important;
@@ -35,11 +32,13 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: Poppins, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  font-family: Poppins, system-ui, -apple-system, Segoe UI, Roboto, Arial,
+    sans-serif;
 }
 
 body {
@@ -54,8 +53,8 @@ body::-webkit-scrollbar {
   display: none;
 }
 body {
-  -ms-overflow-style: none;  /* IE/Edge */
-  scrollbar-width: none;     /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 /* ==========================
@@ -91,14 +90,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 15px ;
+  gap: 15px;
 }
 .topnavbar .title-icon {
   background-color: var(--background-color);
   border-radius: 50px;
   transition: var(--transition);
   height: 50px;
-  width:50px ;
+  width: 50px;
 }
 
 /* ==========================
@@ -113,7 +112,7 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  padding: 0px 25px 15px 25px ;
+  padding: 0px 25px 15px 25px;
   background-color: var(--primary-bg-color);
   transition: var(--transition);
   z-index: 10;
@@ -121,8 +120,8 @@ body {
 .nav {
   display: flex;
   justify-content: center;
-  align-items: center ;
-  color:var(--text-color) !important;
+  align-items: center;
+  color: var(--text-color) !important;
   background-color: var(--background-color) !important;
 }
 .nav:hover {
@@ -136,19 +135,54 @@ body {
 }
 
 .habits {
-  display: flex ;
+  display: flex;
   flex-direction: column;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
-  padding: 20px 10px ;
+  padding: 20px 10px;
 }
 .habits .add-hbt-btn {
   background-color: var(--text-color) !important;
-  color:var(--background-color) !important ;
+  color: var(--background-color) !important ;
   transition: var(--transition);
   padding: 8px 25px;
   border-radius: 12px;
   margin: 5px;
-  text-transform: none ;
-  
+  text-transform: none;
+}
+.add-habits-pg {
+  background-color: var(--background-color);
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 50px;
+  left: 0;
+  padding: 10px;
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: flex-start !important;
+  align-items: center;
+  gap: 48px;
+}
+.add-habits-pg .input-control {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.input-control .inputbox {
+  all: unset;
+  background-color: var(--text-color);
+  color: var(--background-color);
+  font-size: 22px;
+  padding: 12px;
+  border-radius: 12px;
+  text-wrap: wrap;
+}
+
+.add-habits-pg .actions {
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  width: inherit;
+  gap: 100px;
 }
