--- a/src/App.css
+++ b/src/App.css
@@ -206,3 +206,27 @@ body {
   color: var(--text-color);
   border: none;
 }
+.habitcard {
+  background-color: var(--text-color) !important;
+  color: var(--background-color) !important;
+  height: 80px;
+  width: 360px;
+  max-width: 400px;
+  border-radius: 12px !important;
+  flex-shrink: 0;
+}
+.habits-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  min-width: 100%;
+  max-height: 500px;
+  padding: 10px;
+  padding-bottom: 50px;
+  margin: 10px;
+  overflow: auto;
+}
+.habits-list::-webkit-scrollbar {
+  display: none;
+}
