--- a/src/App.css
+++ b/src/App.css
@@ -267,6 +267,10 @@ body {
   border-radius: 12px !important;
   flex-shrink: 0;
 }
+.habitcard .action-icon {
+  font-size: 30px !important;
+  padding: 2px !important;
+}
 .habits-list {
   display: flex;
   flex-direction: column;
